--- a/app/views/dashboard/index.hbs
+++ b/app/views/dashboard/index.hbs
@@ -99,12 +99,16 @@
                     <div id="chartUsuarios" style="width:100%; height:400px;" data-hint="Gráfico de linhas que mostra a quantidade de usuários que foram visto pela primeira vez e pela última vez nos meses"></div>
                     <div id="pieResolucoes" style="width:100%; height:400px;" data-hint="Gráfico de pizza que mostra a quantidade de usuários por resolução da tela do dispositivo que utiliza o app"></div>
                     <div id="barTempoSessao" style="width:100%; height:400px;" data-hint="Gráfico de barras que mostra  o tempo médio de sessão de cada usuário"></div>
-                    <div id="histTempoSessao" style="width:100%; height:400px;" data-hint="Histograma que mostra por meio de grupos de usuários o tempo médio de sessão. Os pontos são usuários individuais, x é o seu número e y o tempo médio de sessão. As barras são os grupos, x é o tempo médio e y é a quantidade de usuários"></div>
+                    {{#if (is_equal usuarioLogado.nivel 'Avançado') }}
+                        <div id="histTempoSessao" style="width:100%; height:400px;" data-hint="Histograma que mostra por meio de grupos de usuários o tempo médio de sessão. Os pontos são usuários individuais, x é o seu número e y o tempo médio de sessão. As barras são os grupos, x é o tempo médio e y é a quantidade de usuários"></div>
+                    {{/if}}
                     <div id="colIdades" style="width:100%; height:400px;" data-hint="Gráfico de barras que mostra a quantidade de usuários por idade"></div>
                     <div id="mapaDist" style="width:100%; height:400px;" data-hint="Mapa que mostra a quantidade de usuários em cada país"></div>
                     <div id="pieViewsAcessos" style="width:100%; height:400px;" data-hint="Gráfico de pizza que mostrada a quantidade de acessos em cada tela do seu app (são considerados múltiplos acessos por usuário)"></div>
-                    <div id="heatMapAcessos" style="width:100%; height:600px;" data-hint="Mapa de calor que mostra sessões iniciadas a cada hora dos dias da semana. Quanto mais escuro, mais acessos)."></div>
-                    <div id="boxPlotDuracao" style="width:100%; height:600px;" data-hint="Box plot dos dados de tempo de sessão total dos usuários no app."></div>
+                    {{#if (is_equal usuarioLogado.nivel 'Avançado') }}
+                        <div id="heatMapAcessos" style="width:100%; height:600px;" data-hint="Mapa de calor que mostra sessões iniciadas a cada hora dos dias da semana. Quanto mais escuro, mais acessos)."></div>
+                        <div id="boxPlotDuracao" style="width:100%; height:600px;" data-hint="Box plot dos dados de tempo de sessão total dos usuários no app."></div>
+                    {{/if}}
                 </div>
             </div>
 
@@ -147,10 +151,12 @@
                         adaptiveHeight:true,
                     });
 
-                    introJs().setOptions({
-                        'hintButtonLabel': '',
-                        'hintPosition': 'top-left'
-                    }).addHints();
+                    {{#if (is_equal usuarioLogado.nivel 'Iniciante') }}
+                        introJs().setOptions({
+                            'hintButtonLabel': '',
+                            'hintPosition': 'top-left'
+                        }).addHints();
+                    {{/if}}
                 });
             </script>
         {{/unless}}
