--- a/app/views/layout/_header.hbs
+++ b/app/views/layout/_header.hbs
@@ -27,7 +27,7 @@
                         <ul class="navbar-nav mr-auto">
                             {{#if usuarioLogado}}
                                 <li class="nav-item">
-                                    <div class="dropdown">
+                                    <div class="dropdown dropleft">
                                         <a href="#" class="nav-link dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-step="1000" data-intro="Caso queira ver esse tour novamente é só clicar em ver tour!">Bem-vindo {{usuarioLogado.local.nome}}</a>
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                             <a class="dropdown-item" href="/dashboard">Dashboard</a>
