Feito alguns ajustes na interface da dashboard

--- a/app/views/dashboard/index.hbs
+++ b/app/views/dashboard/index.hbs
@@ -4,7 +4,7 @@
 
         {{> _mensagens}}
 
-        <h1 class="text-center" data-intro="Bem vindo! A seguir será apresentado as funções da dashboard">Dashboard</h1>
+        <h1 class="text-center" data-intro="Bem vindo! A seguir será apresentado as funções da dashboard">Dados gerais</h1>
 
         {{#unless dados.stats.num_usuarios_totais }}
             <p>A chave SDK para realizar a integração com o app é: <strong>{{ appID }}</strong>.</p>
@@ -86,10 +86,8 @@
                 <div class="shadow bg-white border rounded col-md-5 stats-box" data-intro="Aqui são mostrado mais alguns dados, incluindo dados monetários (se tiver)">
                     <p>Tempo total de uso do app em segundos <strong>{{ dados.stats.tempo_total_sessoes }}s</strong></p>
                     <p>Tempo médio de uso do app por usuário <strong>{{ dados.stats.media_tempo_total }}s</strong></p>
-                    <p>Variância do tempo total de uso do app <strong>{{ dados.stats.variancia_tempo_total }}s</strong></p>
                     <p>Desvio padrão do tempo total de uso do app <strong>{{ dados.stats.desvio_tempo_total }}s</strong></p>
                     <p>Média de gastos por usuários <strong>R$ {{ dados.stats.media_gasto_total }}</strong></p>
-                    <p>Variância de gastos por usuários <strong>R$ {{ dados.stats.variancia_gasto_total }}</strong></p>
                     <p>Desvio padrão de gastos por usuários <strong>R$ {{ dados.stats.desvio_gasto_total }}</strong></p>
                 </div>
             </div>
@@ -98,7 +96,6 @@
                 <div class="col-md-11 shadow bg-white border rounded stats-box">
                     <div id="chartUsuarios" style="width:100%; height:400px;" data-hint="Gráfico de linhas que mostra a quantidade de usuários que foram visto pela primeira vez e pela última vez nos meses"></div>
                     <div id="pieResolucoes" style="width:100%; height:400px;" data-hint="Gráfico de pizza que mostra a quantidade de usuários por resolução da tela do dispositivo que utiliza o app"></div>
-                    <div id="barTempoSessao" style="width:100%; height:400px;" data-hint="Gráfico de barras que mostra  o tempo médio de sessão de cada usuário"></div>
                     {{#if (is_equal usuarioLogado.nivel 'Avançado') }}
                         <div id="histTempoSessao" style="width:100%; height:400px;" data-hint="Histograma que mostra por meio de grupos de usuários o tempo médio de sessão. Os pontos são usuários individuais, x é o seu número e y o tempo médio de sessão. As barras são os grupos, x é o tempo médio e y é a quantidade de usuários"></div>
                     {{/if}}
